--- a/src/main/resources/templates/administrator/medicalsupplies.html
+++ b/src/main/resources/templates/administrator/medicalsupplies.html
@@ -44,7 +44,7 @@
 					</div>
 
 			<!--筛选开始-->
-                <form action="/screening/medical" method="post">
+                <form action="/administrator/medicalsupplies" method="post">
 					<div class="form-wrap-5" id="divCompanyInfo">
 						<div class=" control-row">
 							<div class="control-label">
@@ -101,7 +101,7 @@
                         </tr>
                         </thead>
                         <tbody class="recordLists">
-						<tr th:each="MedicalInformation : ${meList}">
+						<tr th:each="MedicalInformation : ${jq.rows}">
                             <td class="align-center" th:text="${MedicalInformation.id}">111</td>
                             <td class="align-center relative" th:text="${MedicalInformation.name}">
                                 <em class="fs1">针管</em>
@@ -135,16 +135,20 @@
                 <!--</div>-->
                     <div class=" split-line mt mb"></div>
                     <div style="text-align:center;font-size: 15px">
-                        <label>第<span th:text="${p.currentpage}"></span>/<span th:text="${p.totalpage}"></span>页   共<span th:text="${p.totalrows}"></span>条</label>
-                        <a th:href="@{/administrator/medicalsupplies}" type="button" role=button class="button green-button mb">首页</a>
-                        <a th:if="${p.currentpage > 1}" th:href="@{'/screening/queryNext/'+${p.currentpage - 1}}"  type="button" role=button class="button green-button mb">上一页</a>
-                        <a th:if="${p.currentpage == 1}" class="button green-button mb">上一页</a>
-                        <a th:if="${p.currentpage != p.totalpage}" th:href="@{'/screening/queryNext/'+${p.currentpage + 1}}"  type="button" role=button class="button green-button mb">下一页</a>
-                        <a th:if="${p.currentpage == p.totalpage}"  type="button" class="button green-button mb">下一页</a>
-                        <a th:href="@{/screening/queryEnd}" type="button" role=button class="button green-button mb">尾页</a>
+                        <label>第<span th:text="${jq.p}"></span>/<span th:text="${jq.totolPage}"></span>页   共<span th:text="${jq.total}"></span>条</label>
+                        <a th:href="@{/administrator/medicalsupplies(p = 1,user_id=${user_id},name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
+                        <a th:if="${jq.p > 1}" th:href="@{/administrator/medicalsupplies(p=${jq.p - 1},user_id=${user_id},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">上一页</a>
+                        <a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
+                        <a th:if="${jq.p != jq.pageSize}" th:href="@{/administrator/medicalsupplies(p=${jq.p + 1},user_id=${user_id},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">下一页</a>
+                        <a th:if="${jq.p == jq.pageSize}"  type="button" class="button green-button mb">下一页</a>
+                        <a th:href="@{/administrator/medicalsupplies(p=${jq.totolPage},user_id=${user_id},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
 
-                    <form action="/screening/queryJump" method="post" style="margin:0px;display:inline;">
-                        跳转到: <input type="text" style="width: 30px" name="Jumppage" />页
+                    <form action="/administrator/medicalsupplies" method="post" style="margin:0px;display:inline;">
+                        跳转到: <input type="text" style="width: 30px" name="p" />页
+                        <!--(user_id=${user_id},name=${name},status=${status})-->
+                        <input type="hidden"  name="name" th:value="${name}"/>
+                        <input type="hidden"  name="user_id" th:value="${user_id}"/>
+                        <input type="hidden"  name="status" th:value="${status}"/>
                         <input type="submit" value="跳转" class="button green-button mb"/>
                     </form>
                     </div>
