--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -9,9 +9,9 @@
 		<link th:href="@{/css/commonn.css}" rel="stylesheet" type="text/css">
 		<link th:href="@{/css/reg.css}" rel="stylesheet" type="text/css">
 		<link th:href="@{/css/select.css}"  rel="stylesheet" type="text/css">
-		<link rel="stylesheet" th:href="@{css/base.css}" />
-		<link rel="stylesheet" th:href="@{css/pop.css}" />
-		<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}" ></script>
+		<!--<link rel="stylesheet" th:href="@{css/base.css}" />-->
+		<!--<link rel="stylesheet" th:href="@{css/pop.css}" />-->
+		<!--<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}" ></script>-->
 	</head>
 	<body class="login-bg">
 
@@ -31,28 +31,28 @@
 		</div>
 		<div class="width-wrap reg-bg">
 			<div class="reg-title cl">
-				<span class="right-wrap reg_link">已有账号？ <a th:href="@{/member/login.html}" rel="nofollow" class="fs5">立即登录</a></span>
+				<span class="right-wrap reg_link">已有账号？ <a th:href="@{/member/login}" rel="nofollow" class="fs5">立即登录</a></span>
 				<h2>注册<span class="sz14 fs2"></span></h2>
 			</div>
 			<div class="reg-content">
-				<form id="reg-form" autocomplete="off" class="reg-form delpt" novalidate="novalidate" action="" >
+				<form id="reg-form" autocomplete="off" class="reg-form delpt" novalidate="novalidate" action="/addGysUserOne" method="post" >
 					<div class="control-reg relative mt">
 						<label class="login-label label-letter">用户名</label>
-						<input class="reg-input login-input-width" tabindex="0" type="text" placeholder="请输入用户名">
+						<input name="username" class="reg-input login-input-width" tabindex="0" type="text" placeholder="请输入用户名">
 					</div>
-					<div class="login-error fs4"></div>
-					<div id="imgContent" class="control-reg relative">
-						<label class="login-label label-letter-1" for="imgCodeInput">图形验证码</label>
-						<span class="code-reg"><img id="image" src="/nbigfront/entrance/qyduser/getCommonCodeImage?validateKey=57" width="90" height="40"></span>
-						<input class="reg-input login-input-width" id="imgCodeInput" name="imgCodeInput" maxlength="6" type="text" value="" placeholder="请输入图形验证码">
-					</div>
+					<!--<div class="login-error fs4"></div>-->
+					<!--<div id="imgContent" class="control-reg relative">-->
+						<!--<label class="login-label label-letter-1" for="imgCodeInput">图形验证码</label>-->
+						<!--<span class="code-reg"><img id="image" src="/nbigfront/entrance/qyduser/getCommonCodeImage?validateKey=57" width="90" height="40"></span>-->
+						<!--<input class="reg-input login-input-width" id="imgCodeInput" name="imgCodeInput" maxlength="6" type="text" value="" placeholder="请输入图形验证码">-->
+					<!--</div>-->
 
 					<div class="login-error fs4"></div>
 					<div class="control-reg relative">
 						<label class="login-label label-letter-2" for="txtLogPwd">设置登录密码</label>
 						<i id="ipwdeye" class="progess-icon eye-icon delbl eye-position eye-close-icon"></i>
-						<input type="password" name="txtLogPwd" class="ignore" style="display: none;">
-						<input class="reg-input login-input-width" type="password" maxlength="16" id="txtLogPwd" name="txtLogPwd" tabindex="4" autocorrect="off" autocapitalize="off" placeholder="">
+						<!--<input type="password" name="password" class="ignore" style="display: none;">-->
+						<input name="password"  class="reg-input login-input-width" type="password" maxlength="16" id="txtLogPwd" tabindex="4" autocorrect="off" autocapitalize="off" placeholder="请设置登录密码">
 					</div>
 
 <!--					<div class="login-error fs4"></div>-->
@@ -67,7 +67,7 @@
 		</div>
 		
 	</body>
-    <script type="text/javascript" th:src="@{js/core.js}" ></script>
+    <!--<script type="text/javascript" th:src="@{js/core.js}" ></script>-->
 
 </html>
 
