--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="control-reg mb20 cl">
-						<a th:href="@{/usermanagement/}" class="right-wrap sz14 fs1 mt5">忘记密码？</a>
+						<a th:href="@{/usermanagement/resetpassword}" class="right-wrap sz14 fs1 mt5">忘记密码？</a>
 
 					</div>
 					<div>
