--- a/src/main/resources/templates/usermanagement/resetpassword.html
+++ b/src/main/resources/templates/usermanagement/resetpassword.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 	<head>
 		<meta charset="UTF-8">
 		<title>重置密码</title>
-		<link rel="stylesheet" href="../css/commonn.css" />
+		<link rel="stylesheet" th:href="@{/css/commonn.css}" />
+		<link rel="stylesheet" th:href="@{/css/pop.css}" />
+		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}" ></script>
+		<script type="text/javascript" th:src="@{/js/account.js}" ></script>
 	</head>
 	<body>
-		
+        <div sec:authorize="isAnonymous()">
+            <div th:include="common/header_gys" ></div>
+        </div>
+        <div sec:authorize="isAuthenticated()">
+            <div sec:authorize="hasRole('ROLE_USER')"> <!-- 用户类型为ROLE_USER 显示 -->
+                <div th:include="common/header_gys" ></div>
+            </div>
+        </div>
 		<div class="wrap">
 			<div id="container" class="container">
 			    <div class="width-wrap white-bg add-border cl">
@@ -14,12 +25,12 @@
 			            <h3>重置登录密码</h3>
 			        </div>
 			        <div>
-			        	<form id="telnumAndCertForm" autocomplete="off" action="#" novalidate="novalidate">
-				        	<div class="left-progess left-wrap">
-				        		<div class="font-pro left-progess-num">
-				            		<p class="sz16 mt">重置登录密码</p>
-				            	</div>
-				        	</div>
+			        	<form id="telnumAndCertForm" autocomplete="off" method="post" action="/updatePassword" novalidate="novalidate">
+				        	<!--<div class="left-progess left-wrap">-->
+				        		<!--<div class="font-pro left-progess-num">-->
+				            		<!--<p class="sz16 mt">重置登录密码</p>-->
+				            	<!--</div>-->
+				        	<!--</div>-->
 						    <div class="right-wrap right-progess">
 						        <div class="pa30">
 						            <div class="tied-bank-remit fs1 sz14 lh30">
@@ -27,47 +38,63 @@
 						                </p>
 						            </div>
 						        </div>
+
 						        <div class="form-wrap mt">
-						            <div class="control-row cl">
-						                <div class="control-label">手机号码</div>
-						                <div class=" control-input control-text">
-						                    <em class="sz18 font-pro ">130****3913</em>
-						                </div>
-						                <input id="oldPhone" s="old" type="hidden" value="13089213913">
-						            </div>
-						            
-						            <div id="codeCon" class=" control-row">
-						                <div class="control-label">手机验证码</div>
-						                <div class="control-input control-text relative cl">
-						                    <input id="phoneCode" name="phoneCode" type="text" data-rule-required="true" data-msg-required="请输入手机验证码" placeholder="" class=" input-text input-text-small left-wrap" aria-required="true">
-						                    <input id="msgBtn" type="button" value="获取验证码" class=" button button3 ml5 get-button">
-						                    <div id="sendNote" class="note-default left-wrap relative" style="display: none;">
-						                        <span>验证码已发送至手机，30分钟内输入有效，请查收</span>
-						                    </div>
-						                </div>
-						                
-						            </div>
-						                    
-						            <div class=" control-row ">
-						                <div class="control-label">新登录密码</div>
-						                <div class="control-input control-text relative cl">
-						                    <input type="password"  id="newPwd" name="newPwd" data-rule-required="true" data-msg-required="请输入新登录密码" placeholder="" class=" input-text input-text-long left-wrap" />
-						                    
-						                </div>
-						                
-						            </div>
+                                    <div class="control-row cl">
+                                        <div class="control-label">用户名</div>
+                                        <!--<div class=" control-input control-text">-->
+                                        <!--<em class="sz18 font-pro ">130****3913</em>-->
+                                        <!--</div>-->
+                                        <div class="control-input control-text relative cl">
+                                            <input type="text" name="username" data-rule-required="true"  placeholder="请输入用户名" class=" input-text input-text-long left-wrap" />
+                                        </div>
+
+                                    </div>
+                                        <div class="control-row cl">
+                                            <div class="control-label">手机号码</div>
+                                            <!--<div class=" control-input control-text">-->
+                                                <!--<em class="sz18 font-pro ">130****3913</em>-->
+                                            <!--</div>-->
+                                            <div class="control-input control-text relative cl">
+                                                <input type="text"   name="bu_contact_phone" data-rule-required="true"  placeholder="请输入企业联系人手机号" class=" input-text input-text-long left-wrap" />
+                                            </div>
+
+                                        </div>
+
+                                        <div id="codeCon" class=" control-row">
+                                            <div class="control-label">手机验证码</div>
+                                            <div class="control-input control-text relative cl">
+                                                <input id="phoneCode" name="phoneCode" type="text" data-rule-required="true"  placeholder="请输入手机验证码" class=" input-text input-text-small left-wrap" aria-required="true">
+                                                <input id="msgBtn" type="button" value="获取验证码" class=" button button3 ml5 get-button">
+                                                <div id="sendNote" class="note-default left-wrap relative" style="display: none;">
+                                                    <span>验证码已发送至手机，30分钟内输入有效，请查收</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class=" control-row ">
+                                            <div class="control-label">新登录密码</div>
+                                            <div class="control-input control-text relative cl">
+                                                <input type="password"  id="newPwd" name="password" data-rule-required="true"  placeholder="请输入新登录密码" class=" input-text input-text-long left-wrap" />
+
+                                            </div>
+
+                                        </div>
 						            <div class="control-row cl">
 						                <div class=" control-input control-text drdc">
 						                    <input type="submit" class="button button_h46" value="确定">
 						                </div>
 						            </div>
-						        </div>        
+						        </div>
+                            </div>
 			            </form>
 			    	</div>     
 				</div>
 			</div>
 		</div>
 
-		
+        <div th:include="common/footer" ></div>
 	</body>
+	<script type="text/javascript" th:src="@{/js/core.js}" ></script>
 </html>
